src/objects/CTCAE_Code__c.object
<CustomObject>
    <fields>
        <fullName>AE_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Detail</label>
        <referenceTo>AE_Detail__c</referenceTo>
        <relationshipLabel>CTCAE Codes</relationshipLabel>
        <relationshipName>CTCAE_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baseline_Symptoms_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline Symptoms Form</label>
        <referenceTo>BaselineSymptomsForm__c</referenceTo>
        <relationshipLabel>CTCAE Codes</relationshipLabel>
        <relationshipName>CTCAE_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxicity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toxicity</label>
        <referenceTo>Toxicity__c</referenceTo>
        <relationshipLabel>CTCAE Codes</relationshipLabel>
        <relationshipName>CTCAE_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CTCAE Code</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTCAE Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>